==> DONGKHOA/HCMUT_ESD_RFID/Firmware/Libs/RC522/rc522.c <==
#include <stdlib.h>
#include <stdio.h>
#include <string.h>
#include <inttypes.h>
#include "rc522.h"

void Write_MFRC522(u_char addr, u_char val) {
	u_char addr_bits = (((addr << 1) & 0x7E));
  HAL_GPIO_WritePin(GPIOB, GPIO_PIN_12, GPIO_PIN_RESET);
  HAL_SPI_Transmit(&hspi2, &addr_bits, 1, 500);
  HAL_SPI_Transmit(&hspi2, &val, 1, 500);
  HAL_GPIO_WritePin(GPIOB, GPIO_PIN_12, GPIO_PIN_SET);
}

u_char Read_MFRC522(u_char addr) {
  u_char rx_bits;
  u_char addr_bits = (((addr<<1) & 0x7E) | 0x80);
  HAL_GPIO_WritePin(GPIOB, GPIO_PIN_12, GPIO_PIN_RESET);
  HAL_SPI_Transmit(&hspi2, &addr_bits, 1, 500);
  HAL_SPI_TransmitReceive(&hspi2, 0x00, &rx_bits, 1, 500);
  HAL_GPIO_WritePin(GPIOB, GPIO_PIN_12, GPIO_PIN_SET);

	return (u_char) rx_bits;
}

void MFRC522_Init(void)
{
	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_12, 1);
	HAL_GPIO_WritePin(GPIOA, GPIO_PIN_8, 1);
  MFRC522_Reset();

  // Timer: TPrescaler*TreloadVal/6.78MHz = 24ms
	Write_MFRC522(TModeReg, 0x8D);
	Write_MFRC522(TPrescalerReg, 0x3E);
	Write_MFRC522(TReloadRegL, 30);
	Write_MFRC522(TReloadRegH, 0);

	/* 48dB gain */
	Write_MFRC522(RFCfgReg, 0x70);

	Write_MFRC522(TxAutoReg, 0x40);
	Write_MFRC522(ModeReg, 0x3D);

  // interrupts, still playing with these
  // Write_MFRC522(CommIEnReg, 0xFF);
  // Write_MFRC522(DivlEnReg, 0xFF);
  AntennaOff();
  HAL_Delay(1);
  // turn antenna on
  AntennaOn();
}
